--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node server.js",
     "test:staged": "jest",
-    "prepare": "husky install"
+    "test:ci": "jest --coverage",
+    "prepare": "husky install",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info"
   },
   "keywords": [],
   "author": "",
