--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev src/main/server.ts",
     "build": "tsc",
     "start": "node server.js",
+    "test": "jest --watchAll",
     "test:staged": "jest",
     "test:ci": "jest --coverage",
     "prepare": "husky install",
