--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:staged": "jest",
     "test:ci": "jest --coverage",
     "prepare": "husky install",
-    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info"
+    "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info"
   },
   "keywords": [],
   "author": "",
