--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,7 @@ node_js:
 
 script: 
   - eslint 'src/**'
-  # - npm run test:coveralls
-
-
-jobs:
-  include:
-    - stage: Produce Coverage
-      node_js: node
-      script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+  - npm run build
+  - mpm run start
+  - npm run test:coveralls
+  
