--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/main/server.ts",
     "build": "tsc",
-    "start": "node server.js",
+    "start": "node dist/main/server.js",
     "test": "jest --watchAll",
     "test:staged": "jest",
     "test:ci": "jest --coverage",
@@ -21,6 +21,7 @@
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
@@ -35,7 +36,6 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "coveralls": "^3.1.0",
     "express": "^4.17.1"
   },
   "lint-staged": {
