--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,11 +12,24 @@
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
+        
     },
     "plugins": [
         "@typescript-eslint",
         "jest"
     ],
     "rules": {
+      "@typescript-eslint/strict-boolean-expressions": "off",
+      "@typescript-eslint/consistent-type-definitions": "off",
+      "@typescript-eslint/comma-spacing": "off",
+      "@typescript-eslint/return-await": "off",
+      "@typescript-eslint/restrict-template-expressions": "off",
+      "@typescript-eslint/no-misused-promises": "off",
+      "@typescript-eslint/no-namespace": "off",
+      "import/export": "off",
+      "no-useless-constructor": "off",
+      "no-redeclare": 0,
+      "camelcase": 0
+
     }
 }
