--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev src/main/server.ts",
     "build": "tsc",
+    "up": "npm run build && docker-compose up -d",
+    "down": "docker-compose down && rm dist",
     "start": "node dist/main/server.js",
     "test": "jest --watchAll",
     "test:staged": "jest",
@@ -19,11 +21,14 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/pg": "^8.6.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "coveralls": "^3.1.0",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
@@ -36,7 +41,10 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.6.0",
+    "uuid": "^3.4.0"
   },
   "lint-staged": {
     "*.ts": [
