--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "down": "docker-compose down && rm dist",
     "start": "node dist/main/server.js",
     "test": "jest --watchAll",
-    "test:staged": "jest",
+    "test:staged": "jest --passWithNoTests",
     "test:ci": "jest --coverage",
     "prepare": "husky install",
     "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info"
