--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^26.0.23",
     "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.4",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "coveralls": "^3.1.0",
@@ -44,7 +45,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "validator": "^13.6.0"
   },
   "lint-staged": {
     "*.ts": [
