--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: 'postgres:latest'
     restart: always
     environment:
-      POSTGRES_PASSWORD: Arthuracs2228@tt71
+      POSTGRES_PASSWORD: postgres
       POSTGRES_USER: shorAcs1
       POSTGRES_DB: 'nlw'
     volumes: 
