--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "ts-node-dev src/main/server.ts",
     "build": "tsc",
     "up": "npm run build && docker-compose up -d",
-    "down": "docker-compose down && rm dist",
-    "start": "node dist/main/server.js",
+    "down": "docker-compose down && rm -rf dist",
+    "start": "tsc && docker-compose up -d && node dist/main/server.js",
     "test": "jest --watchAll",
     "test:staged": "jest --passWithNoTests",
     "test:ci": "jest --coverage",
