--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes: 
       - ./src/infra/repository/postgres/migrations/2-create-users.sql:/docker-entrypoint-initdb.d/2-create-users.sql
       - ./src/infra/repository/postgres/migrations/3-create-tags.sql:/docker-entrypoint-initdb.d/3-create-tags.sql
+      - ./src/infra/repository/postgres/migrations/4-create-compliments.sql:/docker-entrypoint-initdb.d/4-create-compliments.sql
     ports:
       - '8080:5432'  
 
