--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "prepare": "husky install",
     "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info"
   },
-  "keywords": ["clean Architecture", "clean-code", "valoriza"],
+  "keywords": [
+    "clean Architecture",
+    "clean-code",
+    "valoriza"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.4",
@@ -42,8 +48,10 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "uuid": "^3.4.0",
     "validator": "^13.6.0"
